# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1275 2010-08-09 15:42:38 mb Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.0.0 beta2 (2010/??/??)
 - (2010/08/06) Fixed bug#5676 - Ticket Free Time selection in customer panel is broken, because
    wrong "for" statement inside Label.
 - (2010/08/06) Fixed bug#5691 - Not possbible for a package to modify a file
    that belongs to another package.
 - (2010/08/06) Fixed bug#5690 - In AgentTicketZoom, "reset filter" get's not
    taken over for next relogin.
 - (2010/08/06) Fixed bug#5659 - In Global Ticket Overview, Small View,
    "FROM/SUBJECT" is problematically to read. now it reads "FROM / SUBJECT".
 - (2010/08/06) Fixed bug#5628 - In new Ticket Search, the attribute
    TicketCreateTime, Wording is wrong + Checkbox is not longer needed.
 - (2010/08/06) Fixed bug#5645 - Changing the ticket search options does not
    work.
 - (2010/08/06) Fixed bug#5627 - "Fulltext" attribute in new ticket search
    feature is missing on initial use.
 - (2010/08/06) Fixed bug#5663 - In Global Ticket Overview, in M+L Mode, orange
    hyper links are not shown on hover a record.
 - (2010/08/05) Fixed bug#5670 - In Agent Interface, e. g. note action, you can
    select a file, which get's uploaded automatically. This is not working in
    customer panel.
 - (2010/08/05) Fixed bug#5625 - Article Zoom Screen -> New Message Indicator
    get's not removed after clicking on an article item.
 - (2010/08/05) Fixed bug#5671 - In Customer Panel, there are not used links in
    footer (FAQ, Help, ...).
 - (2010/08/05) Fixed bug#5635 - It's not possible to open Ticket Search feature
    in own browser tab.
 - (2010/08/02) Fixed bug#2774 - Added sha1 and sha2 for additional auth method.