@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1275 2010-08-09 15:42:38 mb Exp $
+# $Id: CHANGES,v 1.1276 2010-08-09 17:40:41 cr Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,8 @@
 # --
 
 3.0.0 beta2 (2010/??/??)
+ - (2010/08/09) Fixed bug#5633 - Customer user information is not shown in
+    ticket zoom if it was set by AgentTicketCustomer.
  - (2010/08/06) Fixed bug#5676 - Ticket Free Time selection in customer panel is broken, because
     wrong "for" statement inside Label.
  - (2010/08/06) Fixed bug#5691 - Not possbible for a package to modify a file
